--- a/pages/community.html
+++ b/pages/community.html
@@ -32,7 +32,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="ourApproach.html">Our Approach</a>
               </li>
-              <li class="nav-item">
+              <li id = "curr-page" class = "nav-item">
                 <a class="nav-link active" href="community.html">Community</a>
               </li>
               <li class="nav-item">
@@ -45,7 +45,13 @@
           </div>
         </div>
        </nav>
-       <main>    
+       <main> 
+        <div class = "top">
+          <h1 id = "start">
+             Community
+           </h1>
+           <img id = "arrow" src = "../assets/images/arrow.gif">
+          </div>    
         <section>
             <div class = "container">
                 <div class = "animated">
