--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -35,7 +35,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="community.html">Community</a>
               </li>
-              <li class="nav-item">
+              <li id = "curr-page" class = "nav-item">
                 <a class="nav-link active" href="aboutUs.html">About Us</a>
               </li>
               <li class="nav-item">
@@ -46,9 +46,48 @@
         </div>
        </nav>
        <main>    
+        <div class = "top">
+          <h1 id = "start">
+             About Us
+           </h1>
+           <img id = "arrow" src = "../assets/images/arrow.gif">
+          </div>  
+          <div class = "profile">
+          <img src = "../assets/images/head.jpg">
           <h1>
-            Coming Soon!
+            Dillon Grant
           </h1>
+          <h2>
+            CEO
+          </h2>
+          <h2>
+            Endicott College '22
+          </h2>
+          </div>
+          <div class = "profile">
+            <img src = "../assets/images/head.jpg">
+            <h1>
+              Luke Podice
+            </h1>
+            <h2>
+              Head Developer
+            </h2>
+            <h2>
+              Endicott College '23
+            </h2>
+            </div>
+            <div class = "profile">
+              <img src = "../assets/images/head.jpg">
+              <h1>
+                Noah Sarge
+              </h1>
+              <h2>
+                Backend Developer
+              </h2>
+              <h2>
+                Endicott College '24
+              </h2>
+              </div>
        </main>
        <script>
             window.onload = function() {
