--- a/pages/whySello.html
+++ b/pages/whySello.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel= "stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin= "anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link rel ="icon" href= "../images/icon.png">
+        <link rel ="icon" href= "../assets/images/icon.png">
         <link rel="stylesheet" href = "../styles/main.css">
         <link rel="stylesheet" href = "../styles/whySello.css">
         <link rel="preconnect" href= "https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
-              <li class="nav-item">
+              <li id = "curr-page" class = "nav-item">
                 <a class="nav-link active" href="whySello.html">Why Sello?</a>
               </li>
               <li class="nav-item">
@@ -48,9 +48,21 @@
         </div>
        </nav>
        <main>
+        <div class = "top">
+        <h1 id = "start">
+           Why Sello?
+         </h1>
+         <img id = "arrow" src = "../assets/images/arrow.gif">
+        </div>
+        <div id = "mySidenav" class = "sidenav">
+          <a href = "javascript:void(0)" class = "closebtn" onclick = "closeNav()">&times;</a>
+          <a href = "#intro">Intro</a>
+        </div>
+        <div id = "main">
+          <span id = "tri" style = "font-size:30px;cursor:pointer" onclick = "openNav()">&#9776;</span>
         <div class = "container">
           <div class = "animated">
-            <h1>
+            <h1 id = "first">
               Why Use Sello?
             </h1>
             <p id="intro">
@@ -59,15 +71,15 @@
             <h1>
               Why We Developed Sello
             </h1>
-            <p>
+            <p id = "text2">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at lacus eget nisi sodales volutpat. Praesent tortor purus, pharetra non orci non, vulputate consectetur mi. Etiam vel risus in odio eleifend tempus eget non augue. Donec semper dui blandit, tempus ante vitae, faucibus sapien. Mauris at tellus vel eros malesuada dapibus sed ac leo. Aenean vitae urna at purus congue tincidunt vitae nec lorem. Nam dui magna, luctus nec dignissim at, finibus quis tortor. Nam aliquam sed libero in fermentum. Nunc pharetra elit non bibendum ultricies.
 
               Phasellus sed odio sed lorem lobortis gravida at in ipsum. Aenean a mauris a sapien sollicitudin maximus vel in libero. Aenean convallis facilisis maximus. Proin tempus mattis felis, id bibendum metus facilisis consectetur. Curabitur vel erat vel tellus sodales rhoncus non id leo. Vestibulum tristique leo ac nisi volutpat fermentum. Fusce eu velit ut nibh ultrices varius. Proin accumsan eu odio id volutpat. Donec ac nunc massa. Sed facilisis hendrerit massa, eu aliquet dolor pretium in. Pellentesque at nisl arcu.
             </p>
-        <h1>
+        <h1 id = "head3">
           Reactions to Sello
         </h1>
-        <p>
+        <p id = "text3">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at lacus eget nisi sodales volutpat. Praesent tortor purus, pharetra non orci non, vulputate consectetur mi. Etiam vel risus in odio eleifend tempus eget non augue. Donec semper dui blandit, tempus ante vitae, faucibus sapien. Mauris at tellus vel eros malesuada dapibus sed ac leo. Aenean vitae urna at purus congue tincidunt vitae nec lorem. Nam dui magna, luctus nec dignissim at, finibus quis tortor. Nam aliquam sed libero in fermentum. Nunc pharetra elit non bibendum ultricies.
 
           Phasellus sed odio sed lorem lobortis gravida at in ipsum. Aenean a mauris a sapien sollicitudin maximus vel in libero. Aenean convallis facilisis maximus. Proin tempus mattis felis, id bibendum metus facilisis consectetur. Curabitur vel erat vel tellus sodales rhoncus non id leo. Vestibulum tristique leo ac nisi volutpat fermentum. Fusce eu velit ut nibh ultrices varius. Proin accumsan eu odio id volutpat. Donec ac nunc massa. Sed facilisis hendrerit massa, eu aliquet dolor pretium in. Pellentesque at nisl arcu.
@@ -75,6 +87,17 @@
       </div>
       </div>
       <script src = "../javascript/fade.js"></script>
+      <script>
+        function openNav(){
+          document.getElementById("mySidenav").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+        }
+        function closeNav(){
+          document.getElementById("mySidenav").style.width = "0px";
+          document.getElementById("main").style.marginLeft = "0px";
+        }
+      </script>
+    </div>
        </main>
        <script>
             window.onload = function() {
