--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href= "https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         
-        <title>Sello</title>
+        <title>About Us</title>
     </head>
     <body>
       <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
@@ -52,11 +52,15 @@
            </h1>
            <img id = "arrow" src = "../assets/images/arrow.gif">
           </div>  
+          <div class = "container">
+            <div class = "animated">
           <div class = "profile">
           <img src = "../assets/images/head.jpg">
+          <a class = "name" href = "https://www.linkedin.com/in/dillon-grant-19b72b202/">
           <h1>
             Dillon Grant
           </h1>
+          </a>
           <h2>
             CEO
           </h2>
@@ -66,9 +70,11 @@
           </div>
           <div class = "profile">
             <img src = "../assets/images/head.jpg">
+            <a class = "name" href = "https://www.linkedin.com/in/luke-jodice-983305175/" target = "_blank">
             <h1>
-              Luke Podice
+              Luke Jodice
             </h1>
+            </a>
             <h2>
               Head Developer
             </h2>
@@ -78,9 +84,11 @@
             </div>
             <div class = "profile">
               <img src = "../assets/images/head.jpg">
+              <a class = "name" href = "https://www.linkedin.com/in/noah-sarge-b69bb3222/">
               <h1>
                 Noah Sarge
               </h1>
+            </a>
               <h2>
                 Backend Developer
               </h2>
@@ -88,7 +96,10 @@
                 Endicott College '24
               </h2>
               </div>
+              </div>
+              </div>
        </main>
+       <script src = "../javascript/fade.js"></script>
        <script>
             window.onload = function() {
             var d = new Date();
