--- a/pages/community.html
+++ b/pages/community.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href= "https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         
-        <title>Sello</title>
+        <title>Community</title>
     </head>
     <body>
       <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
