--- a/pages/ourApproach.html
+++ b/pages/ourApproach.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         
-        <title>About Sello</title>
+        <title>Our Approach</title>
     </head>
     <body>
       <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
@@ -54,7 +54,8 @@
           </div> 
           <div id = "mySidenav" class = "sidenav">
             <a href = "javascript:void(0)" class = "closebtn" onclick = "closeNav()">&times;</a>
-            <a href = "#intro">Intro</a>
+            <a href = "#head1" class = "links" id = "t">App Design</a>
+            <a href = "#second" class = "links">Helping Both Businesses and Influencers</a>
           </div>
           <div id = "main">
             <span id = "tri" style = "font-size:30px;cursor:pointer" onclick = "openNav()">&#9776;</span>
@@ -85,7 +86,7 @@
       </div>
       <br>
     </section>
-      <h1>
+      <h1 id = "second">
         Helping Both Businesses and Influencers
       </h1>
       <p>
