--- a/pages/whySello.html
+++ b/pages/whySello.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href= "https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         
-        <title>Sello</title>
+        <title>Why Sello?</title>
     </head>
     <body>
        <header>
@@ -56,19 +56,23 @@
         </div>
         <div id = "mySidenav" class = "sidenav">
           <a href = "javascript:void(0)" class = "closebtn" onclick = "closeNav()">&times;</a>
-          <a href = "#intro">Intro</a>
+          <a href = "#first" class = "links" id = "t">Why Use Sello?</a>
+          <a href = "#second" class = "links">Why We Developed Sello</a>
+          <a href = "#third" class = "links">Reactions to Sello</a>
+
         </div>
         <div id = "main">
           <span id = "tri" style = "font-size:30px;cursor:pointer" onclick = "openNav()">&#9776;</span>
         <div class = "container">
           <div class = "animated">
+            
             <h1 id = "first">
               Why Use Sello?
             </h1>
             <p id="intro">
               At Sello we believe that everyone has influence, but is not always given credit for how much influence they have. We set out to fix this, and are building a system that allows anyone to capitalize on their personal brand. Through a commision based relationship with businesses and products of their choosing, users of any popularity will be able to monetize their social media accounts and other digital platforms.
             </p>
-            <h1>
+            <h1 id = "second">
               Why We Developed Sello
             </h1>
             <p id = "text2">
@@ -76,7 +80,7 @@
 
               Phasellus sed odio sed lorem lobortis gravida at in ipsum. Aenean a mauris a sapien sollicitudin maximus vel in libero. Aenean convallis facilisis maximus. Proin tempus mattis felis, id bibendum metus facilisis consectetur. Curabitur vel erat vel tellus sodales rhoncus non id leo. Vestibulum tristique leo ac nisi volutpat fermentum. Fusce eu velit ut nibh ultrices varius. Proin accumsan eu odio id volutpat. Donec ac nunc massa. Sed facilisis hendrerit massa, eu aliquet dolor pretium in. Pellentesque at nisl arcu.
             </p>
-        <h1 id = "head3">
+        <h1 id = "third">
           Reactions to Sello
         </h1>
         <p id = "text3">
